--- a/views/user-pages/userListProductsPage.ejs
+++ b/views/user-pages/userListProductsPage.ejs
@@ -354,7 +354,7 @@
       </div>
     </div>
   </section>
-  <section>
+  <!-- <section>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -405,7 +405,7 @@
           });
       }
     </script>
-  </section>
+  </section> -->
 
   <!-- including user footer  -->
   <%- include('../../partials/user-partials/user-footer.ejs') %>
