--- a/views/user-pages/userDownloadInvoicePage.ejs
+++ b/views/user-pages/userDownloadInvoicePage.ejs
@@ -38,6 +38,15 @@
       <div class="col-12 right-side-nav m-0 p-0 px-3" id="invoive-contents" >
         <!-- invoice heading  -->
         <div class="row m-0 p-0 py-2 border rounded-3 mt-3">
+          <div class="col-lg-6 col-md-12 d-flex justify-content-end align-items-center">
+            <a class="fs-3 fw-bold text-decoration-none text-black" href="/">cloth<span class="fw-bold">STORE</span></a>
+          </div>
+          <div class="col-lg-6 col-md-12 d-flex justify-content-start align-items-center">
+            <img class="m-0 p-0 img-fluid border-0 font-size" style="object-fit: cover; width: auto; height: 50px;" src="/images/clothStore_favicon.jpg" alt="company logo">
+          </div>
+        </div>
+        <!-- invoice heading  -->
+        <div class="row m-0 p-0 py-2 border rounded-3 mt-3">
           <div class="col-md-12 d-flex justify-content-center align-items-center">
             <p class="m-0 p-0 text-black text-center fs-6 fw-bolder">Tax Invoice</p>
           </div>
@@ -243,8 +252,8 @@
                     <th class="text-black font-size text-center align-middle text-truncate" scope="col">GST 18%</th>
                     <th class="text-black font-size text-center align-middle text-truncate" scope="col">SGST 9%</th>
                     <th class="text-black font-size text-center align-middle text-truncate" scope="col">CGST 9%</th>
-                    <th class="text-black font-size text-center align-middle text-truncate" scope="col">Total disc. %</th>
-                    <th class="text-black font-size text-center align-middle text-truncate" scope="col">Total disc. amt.</th>
+                    <th class="text-black font-size text-center align-middle text-truncate" scope="col">Disc. %</th>
+                    <th class="text-black font-size text-center align-middle text-truncate" scope="col">Disc. amt.</th>
                     <th class="text-black font-size text-center align-middle text-truncate" scope="col">Total</th>
                   </tr>
                 </thead>
