--- a/views/admin-pages/adminDashboardCustomPage.ejs
+++ b/views/admin-pages/adminDashboardCustomPage.ejs
@@ -74,8 +74,8 @@
                         <th class="text-white font-size-small bg-black text-center text-truncate">Disc. Amt.</th>
                         <th class="text-white font-size-small bg-black text-center text-truncate">Coup. %</th>
                         <th class="text-white font-size-small bg-black text-center text-truncate">Coup. Amt.</th>
-                        <th class="text-white font-size-small bg-black text-center text-truncate">Total Disc. %</th>
-                        <th class="text-white font-size-small bg-black text-center text-truncate">Total Disc. Amt.</th>
+                        <th class="text-white font-size-small bg-black text-center text-truncate">T. Disc. %</th>
+                        <th class="text-white font-size-small bg-black text-center text-truncate">T. Disc. Amt.</th>
                         <th class="text-white font-size-small bg-black text-center text-truncate">Total</th>
                       </tr>
                     </thead>
@@ -113,7 +113,7 @@
                       <% paginatedOrder?.forEach((element, index) => { %>
                       <tr class="font-size">
                         <td class="text-black table-white font-size-small text-truncate text-end"><%= index + 1 %></td>
-                        <td class="text-black table-white font-size-small text-truncate text-start"><%= element?.product?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ') %></td>
+                        <td class="text-black table-white font-size-small text-truncate text-start"><%= element?.product?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ').slice(0, 8) %></td>
                         <td class="text-black table-white font-size-small text-truncate text-end"><%= element?.mrp?.toFixed(2) %></td>
                         <td class="text-black table-white font-size-small text-truncate text-end"><%= element?.quantity?.toFixed(2) %></td>
                         <td class="text-black table-white font-size-small text-truncate text-end"><%= element?.taxRate * 100 %> %</td>
