--- a/views/admin-pages/adminDashboardDailyPage.ejs
+++ b/views/admin-pages/adminDashboardDailyPage.ejs
@@ -76,8 +76,8 @@
                         <th class="text-white font-size-small bg-black text-center text-truncate">Disc. Amt.</th>
                         <th class="text-white font-size-small bg-black text-center text-truncate">Coup. %</th>
                         <th class="text-white font-size-small bg-black text-center text-truncate">Coup. Amt.</th>
-                        <th class="text-white font-size-small bg-black text-center text-truncate">Total Disc. %</th>
-                        <th class="text-white font-size-small bg-black text-center text-truncate">Total Disc. Amt.</th>
+                        <th class="text-white font-size-small bg-black text-center text-truncate">T. Disc. %</th>
+                        <th class="text-white font-size-small bg-black text-center text-truncate">T. Disc. Amt.</th>
                         <th class="text-white font-size-small bg-black text-center text-truncate">Total</th>
                       </tr>
                     </thead>
@@ -100,7 +100,7 @@
                         <td class="text-black table-white font-size-small text-end text-truncate"><%= dailyData?._id?.day %></td>
                         <td class="text-black table-white font-size-small text-end text-truncate"><%= getMonthName(dailyData?._id?.month) %></td>
                         <td class="text-black table-white font-size-small text-end text-truncate"><%= dailyData?._id?.year %></td>
-                        <td class="text-black table-white font-size-small text-start text-truncate"><%= element?.product?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ') %></td>
+                        <td class="text-black table-white font-size-small text-start text-truncate"><%= element?.product?.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()).join(' ').slice(0, 8) %></td>
                         <td class="text-black table-white font-size-small text-end text-truncate"><%= element?.mrp?.toFixed(2) %></td>
                         <td class="text-black table-white font-size-small text-end text-truncate"><%= element?.taxRate * 100 %> %</td>
                         <td class="text-black table-white font-size-small text-end text-truncate"><%= element?.quantity?.toFixed(2) %></td>
