fix : added Math.round function on product cards for average rating

--- a/views/user-pages/userListAllProductsPage.ejs
+++ b/views/user-pages/userListAllProductsPage.ejs
@@ -225,7 +225,7 @@
                                 <% } %>
                               <% } %>
                               <span class="font-size text-primary">
-                                <%= listAllProducts?.averageRating%> Stars. |
+                                <%= Math.round(listAllProducts?.averageRating)%> Stars. |
                                 <%= listAllProducts?.countOfRatings%> Ratings.
                               </span>
                             </div>
