--- a/views/user-pages/userListAverageRatedPage.ejs
+++ b/views/user-pages/userListAverageRatedPage.ejs
@@ -225,8 +225,8 @@
                                 <% } %>
                               <% } %>
                               <span class="font-size text-primary">
-                                <%= averageRatedProducts.averageRating%> Stars. |
-                                <%= averageRatedProducts.countOfRatings%> Ratings.
+                                <%= Math.round(averageRatedProducts?.averageRating)%> Stars. |
+                                <%= averageRatedProducts?.countOfRatings%> Ratings.
                               </span>
                             </div>
                           </div>
