--- a/views/user-pages/userListBrandWisePage.ejs
+++ b/views/user-pages/userListBrandWisePage.ejs
@@ -207,7 +207,7 @@
                             <% } %>
                             <% } %>
                             <span class="font-size text-primary">
-                              <%= brandwise?.averageRating%> Stars. |
+                              <%= Math.round(brandwise?.averageRating)%> Stars. |
                               <%= brandwise?.countOfRatings%> Ratings.
                             </span>
                           </div>
