--- a/views/user-pages/userListFeaturedProductsPage.ejs
+++ b/views/user-pages/userListFeaturedProductsPage.ejs
@@ -225,7 +225,7 @@
                                 <% } %>
                               <% } %>
                               <span class="font-size text-primary">
-                                <%= featured?.averageRating%> Stars. |
+                                <%= Math.round(featured?.averageRating) %> Stars. |
                                 <%= featured?.countOfRatings%> Ratings.
                               </span>
                             </div>
