--- a/views/user-pages/userListFlashSalesPage.ejs
+++ b/views/user-pages/userListFlashSalesPage.ejs
@@ -224,7 +224,7 @@
                         <% } %>
                         <% } %>
                         <span class="font-size text-primary">
-                          <%= flashsale?.averageRating%> Stars. |
+                          <%=Math.round(flashsale?.averageRating) %> Stars. |
                           <%= flashsale?.countOfRatings%> Ratings.
                         </span>
                       </div>
