--- a/views/user-pages/userListPopularProductsPage.ejs
+++ b/views/user-pages/userListPopularProductsPage.ejs
@@ -226,7 +226,7 @@
                                 <% } %>
                               <% } %>
                               <span class="font-size text-primary">
-                                <%= popularProduct?.averageRating %> Stars. |
+                                <%= Math.round(popularProduct?.averageRating) %> Stars. |
                                 <%= popularProduct?.countOfRatings%> Ratings.
                               </span>
                             </div>
