--- a/views/user-pages/userListSearchResultPage.ejs
+++ b/views/user-pages/userListSearchResultPage.ejs
@@ -229,7 +229,7 @@
                                 <% } %>
                               <% } %>
                               <span class="font-size text-primary">
-                                <%= searchResults?.averageRating %> Stars. |
+                                <%= Math.round(searchResults?.averageRating) %> Stars. |
                                 <%= searchResults?.countOfRatings%> Ratings.
                               </span>
                             </div>
